<resources>
    <string name="app_name">Placement Success</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="placement_accent">Placement Accent</string>
    <string name="Placement_success" />
    <string name="title_activity_nav_">Nav_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Loading Name...</string>
    <string name="nav_header_subtitle">Loading Email...</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Feed</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">Settings</string>
    <string name="menu_logout">LogOut</string>
    <string name="title_activity_search">searchActivity</string>
    <string name="nsec_desc">Netaji Subhash Engineering College (NSEC) has been set up, keeping in mind the ideals of Netaji Subhash Chandra Bose, whose contribution to the Indian Freedom Movement remains invaluable forever. Netaji had dreamt of vibrant, strong and powerful India, an India which would be independent and self reliant, not only politically, but also in the spheres of Education and Technology. He strongly believed that true independence can only stem from strong base in education and technology. His vision is our beacon and to give a concrete shape to his vision, we have set up Netaji Subhash Engineering College. We believe in his ideals that intelligent minds are the greatest resources in any walk of life. Our vision is to infuse young, intelligent minds with cutting edge technical education and help them to become mature professionals poised and ready to accept technical and managerial challenges in the global scenario.</string>
    <string-array name="comment_type">
        <item>General</item>
        <item>Question/Answer</item>
    </string-array>

    <string-array name="comment_type_show">
        <item>All</item>
        <item>General</item>
        <item>Question/Answer</item>
    </string-array>
</resources>
