<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_selectSkills"
            android:icon="@drawable/ic_check_circle_black_24dp"
            android:title="Select Skills" />

        <item
            android:id="@+id/nav_whatsNew"
            android:icon="@drawable/ic_alarm_add_black_24dp"
            android:title="Whats New" />



        <item android:title="Jobs">
                <menu><item
                    android:id="@+id/nav_search_job"
                    android:icon="@drawable/ic_search_black_24dp"
                    android:title="Search Jobs" />
                        <item
                            android:id="@+id/nav_recommended_job"
                            android:icon="@drawable/ic_playlist_add_check_black_24dp"
                            android:title="Recommended Jobs" />
                        <item
                            android:id="@+id/nav_applied_job"
                            android:icon="@drawable/ic_touch_app_black_24dp"
                            android:title="Applied Jobs" />
                </menu>
        </item>

        <item android:title="Communicate">
                <menu>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_settings_power_black_24dp"
            android:title="@string/menu_logout" /></menu>
        </item>

</menu>
